MySQL Driver added

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
             <scope>test</scope>
         </dependency>
         <!-- end::tests[] -->
+        
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.38</version>
+</dependency>
+        
     </dependencies>
 
     <properties>
